--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^3.26.4",
+    "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
+    "highlight.js": "^9.17.1",
+    "markdown-navbar": "^1.1.0",
+    "marked": "^0.8.0",
     "next": "9.1.6",
+    "next-compose-plugins": "^2.2.0",
+    "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   }
